<resources>
    <string name="app_name" translatable="false">Make A Plan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--messages and warnings-->
    <string name="welcome_message">Sign in succesfully. Welcome to Make A Plan!</string>
    <string name="cancel_sign_in_message">Sign in canceled</string>
    <string name="remove_image_warning">Are you sure you want to remove this image?</string>
    <string name="uploading_message">Please wait until the upload is complete</string>
    <string name="under_development_message">Feature under development. Coming soon.</string>
    <string name="become_friend_message">has become your friends</string>
    <string name="downloading_message">Please wait until the download is complete</string>

    <!--errors-->
    <string name="name_empty_error">Task name is required. Please enter a valid name.</string>
    <string name="note_empty_error">Note content is required. Please enter valid content.</string>
    <string name="location_empty_error">Location is required. Please choose a valid location.</string>
    <string name="create_qr_code_error">There was a problem displaying the qr code.</string>
    <string name="app_requires_network_error">Cannot connect to server. An internet connection is required.</string>
    <string name="feature_requires_network_error">This feature requires an internet connection to run.</string>
    <string name="no_friend_error">Your friends list is empty.</string>
    <string name="require_camera_permission_error">This feature requires camera permission to run.</string>
    <string name="no_app_handle_intent_error">No application can handle your request.</string>

    <!--navigation drawer menus-->
    <string name="current_plans_menu">Current Plans</string>
    <string name="overdue_plans_menu">Overdue Plans</string>
    <string name="settings_menu">Settings</string>
    <string name="help_feeback_menu">Help and feedback</string>
    <string name="my_account_menu">My account</string>

    <!--menus-->
    <string name="sign_out_menu">Sign out</string>
    <string name="take_photo_menu">Take photo</string>
    <string name="gallery_menu">Gallery</string>
    <string name="reminder_menu">Reminder</string>
    <string name="edit_menu">Edit</string>

    <!--buttons-->
    <string name="group_button">Group</string>
    <string name="personal_button">Personal</string>
    <string name="add_friend_button">Add friend</string>
    <string name="done_button">Done</string>
    <string name="navigate_button">Navigate</string>
    <string name="yes_button">Yes</string>
    <string name="ok_button" translatable="false">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="quit_button">Quit</string>
    <string name="try_again_button">Try again</string>

    <!--label not translatable-->
    <string name="personal" translatable="false">Personal</string>
    <string name="group" translatable="false">Group</string>
    <string name="account_id" translatable="false">Account ID</string>
    <string name="my_account" translatable="false">My account</string>

    <!--labels-->
    <string name="task_label">Task</string>
    <string name="group_plan_label">Group plan</string>
    <string name="personal_plan_label">Personal plan</string>
    <string name="task_name_example_label">e.g. University of Science</string>
    <string name="due_date_label">Due date</string>
    <string name="time_label">Time</string>
    <string name="location_label">Location</string>
    <string name="invitees_label">Invitees</string>
    <string name="invitee_label">invitee(s)</string>
    <string name="no_invitee_label">0 invitee</string>
    <string name="choose_invitees_label">Choose your invitees</string>
    <string name="going_label">Going?</string>
    <string name="note_label">Note</string>
    <string name="plan_image_label">Plan image</string>
    <string name="account_name_label">Account Name</string>
    <string name="email_label">Email</string>
    <string name="number_plans_label">Plans created</string>
    <string name="account_id_label">Account ID</string>
    <string name="complete_action_using_label">Complete action using</string>
    <string name="title_activity_settings">Settings</string>

    <!--firebase child nodes-->
    <string name="firebase_users" translatable="false">users</string>
    <string name="firebase_personal_plan" translatable="false">personalPlan</string>
    <string name="firebase_group_plan" translatable="false">groupPlan</string>
    <string name="firebase_plans" translatable="false">plans</string>
    <string name="firebase_friends" translatable="false">friends</string>
    <string name="firebase_name" translatable="false">name</string>
    <string name="firebase_invitees_status" translatable="false">inviteesStatus</string>

    <!--keys-->
    <string name="my_api_key" translatable="false">AIzaSyDiUS6uJoZiBILeJJbzLUQBl6kXZhmaUPQ</string>
    <string name="facebook_application_id" translatable="false">500750373599679</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb500750373599679</string>

    <!-- Strings related to Settings -->
    <string name="pref_date_format_title">Date format</string>
    <string-array name="pref_date_format_option_labels">
        <item>14/03/2012</item>
        <item>03/14/2012</item>
        <item>2012/03/14</item>
        <item>Mar 3, 2012</item>
        <item>Wed, Mar 3, 2012</item>
        <item>Wednesday, March 3, 2012</item>
    </string-array>
    <string-array name="pref_date_format_option_values">
        <item>dd/MM/yyyy</item>
        <item>MM/dd/yyyy</item>
        <item>yyyy/MM/dd</item>
        <item>MMM d, yyyy</item>
        <item>EEE, MMM d, yyyy</item>
        <item>EEEE, MMMM d, yyyy</item>
    </string-array>
    <string name="pref_date_format_default" translatable="false">dd/MM/yyyy</string>

    <!-- Strings related to Settings -->
    <string name="pref_time_format_title">Time format</string>
    <string-array name="pref_time_format_option_labels">
        <item>01:30 PM</item>
        <item>13:30</item>
        <item>13:30 PM, GMT+07:00</item>
    </string-array>
    <string-array name="pref_time_format_option_values">
        <item>hh:mm a</item>
        <item>HH:mm</item>
        <item>K:mm a, z</item>
    </string-array>
    <string name="pref_time_format_default" translatable="false">hh:mm a</string>

</resources>
